|
Bug ID:
|
6888619
|
|
Votes
|
0
|
|
Synopsis
|
G1: too many guarantees in concurrent marking
|
|
Category
|
hotspot:garbage_collector
|
|
Reported Against
|
|
|
Release Fixed
|
hs17(b04),
7(b75) (Bug ID:2184798)
|
|
State
|
10-Fix Delivered,
request for enhancement
|
|
Priority:
|
4-Low
|
|
Related Bugs
|
6893095
|
|
Submit Date
|
06-OCT-2009
|
|
Description
|
In the G1 concurrent marking code has a large number of guarantees, even in frequently executed code. We should change them to asserts.
Posted Date : 2009-10-06 13:54:03.0
|
|
Work Around
|
N/A
|
|
Evaluation
|
See Description.
Posted Date : 2009-10-06 13:57:38.0
http://hg.openjdk.java.net/jdk7/hotspot-gc/hotspot/rev/11d4857fe5e1
Posted Date : 2009-10-07 16:26:13.0
|
|
Comments
|
PLEASE NOTE: JDK6 is formerly known as Project Mustang
|