6888619: G1: too many guarantees in concurrent marking

Change more guarantees in concurrent marking into asserts.

Reviewed-by: apetrusenko, iveresov